# adventofcode-2021

./: .gitignore  README.md  adventofcode2021.cabal
app/: Main.hs
src/Aoc/: Day01.hs  Day02.hs  Day03.hs
test/Aoc/: Day01Spec.hs  Day02Spec.hs  Day03Spec.hs
