cabal-version:      3.0
name:               adventofcode2021
version:            0.1.0.0
synopsis:
homepage:
license:            NONE
author:             David Tchepak
maintainer:         dave@davesquared.net
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Aoc,
                      Aoc.Day01,
                      Aoc.Day02
    build-depends:    base ^>=4.14.3.0
                      , megaparsec ^>=9.2
                      , text ^>=1.2.4
    hs-source-dirs:   src
    default-language: Haskell2010

executable adventofcode2021
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        adventofcode2021

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite adventofcode2021-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:    Aoc.Day01Spec
    build-depends:    adventofcode2021, base ^>=4.14.3.0, hspec ^>=2.9, QuickCheck ^>=2.14
    build-tool-depends:  hspec-discover:hspec-discover == 2.*
    ghc-options: -Wno-missing-home-modules
